--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "codemirror": "^6.0.1",
     "react": "^18.2.0",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "unique-username-generator": "^1.1.1"
   },
   "devDependencies": {
