--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@uiw/react-codemirror": "v3.2.1",
+    "ace-builds": "^1.11.1",
     "codemirror": "^6.0.1",
+    "console-feed": "^3.4.0",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
