--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-ace": "^10.1.0",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
     "unique-username-generator": "^1.1.1"
   },
