--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
+    "socket.io-client": "^4.5.2",
     "unique-username-generator": "^1.1.1"
   },
   "devDependencies": {
