--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 
+!node_modules/.pnpm/react-ace@10.1.0_biqbaboplfbrettd7655fr4n2y/node_modules/react-ace/lib/editorOptions.js
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
