--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/*
 dist
 dist-ssr
 *.local
 
-!node_modules/.pnpm/react-ace@10.1.0_biqbaboplfbrettd7655fr4n2y/node_modules/react-ace/lib/editorOptions.js
+!node_modules/.pnpm/react-ace
 
 # Editor directories and files
 .vscode/*
