--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ dist
 dist-ssr
 *.local
 
-!node_modules/react-ace
+!node_modules/react-ace/lib/editorOptions.js
 
 # Editor directories and files
 .vscode/*
